# metatrader5-quant-server-python

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/backtest/: simulator.py
app/cli/: main.py
app/config/: io.py  schema.py
app/data/: loading.py  quality.py  sufficiency.py
app/datasets/: builder.py  splitting.py  targets.py
app/evaluation/: core.py  metrics.py  predict.py
app/features/: engineering.py
app/models/: __init__.py  cnn1d.py  gru.py  mlp.py  registry.py
app/training/: loop.py  runs.py
app/utils/: io.py  paths.py  seeding.py
apps/: __init__.py
apps/api/: __init__.py  main.py  schemas.py
apps/web/: .prettierrc.json  components.json  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
apps/web/app/: icon.tsx  layout.tsx
apps/worker/: __init__.py  main.py  services.py
backend/mt5/: Dockerfile
configs/: close_return_cnn.yaml  direction_gru.yaml  tp_before_sl_mlp.yaml
docs/: architecture.md  current-data-sufficiency.md  frontend-architecture.md  migration-plan.md
infra/docker/: quant-api.Dockerfile  quant-worker.Dockerfile  web.Dockerfile
libs/: __init__.py
libs/backtest/: engine.py
libs/common/: __init__.py  config.py  hashing.py  logging.py  time.py  types.py
libs/datasets/: __init__.py  builder.py
libs/features/: engineering.py
libs/labels/: __init__.py  engine.py
libs/mt5_adapter/: __init__.py  client.py  exceptions.py  models.py
libs/papertrade/: __init__.py  engine.py
libs/storage/: __init__.py  base.py  db.py  models.py  quality.py  repositories.py  schemas.py
migrations/: env.py
tests/: test_backtest.py  test_cli_smoke.py  test_config_validate.py  test_data_quality.py  test_dataset_builder.py  test_features.py  test_features_no_leakage.py  test_labels.py  test_metrics.py  test_mt5_client.py  test_quality.py  test_splitting.py  test_sufficiency.py  test_targets.py
(+105 files in other folders)
